fix icon alignment

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -110,6 +110,16 @@ body {
   z-index: -1;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: inset 0 0 0 20px var(--background-color);
+  display: block;
+  width: 100vw;
+  height: 100svh;
+}
+
 h1 {
   font-size: 1.5rem;
 }
@@ -120,6 +130,11 @@ h2 {
 
 h3 {
   font-size: 1.1rem;
+}
+
+h2:has(a),
+h3:has(a) {
+  font-size: 1rem;
 }
 
 h1,
@@ -414,7 +429,6 @@ img {
 
 .pill {
   width: fit-content;
-  display: block;
   padding: 0.2rem 0.6rem;
   border: 2px solid var(--background-transparent);
   background-color: var(--background-transparent);
