--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -32,10 +32,6 @@
   margin-bottom: 0;
 }
 
-.home-post a {
-  text-decoration: none;
-}
-
 .home-post-date {
   color: white;
   font-size: 0.9rem;
